--- a/OtelOtomasyon/OtelOtomasyon.csproj
+++ b/OtelOtomasyon/OtelOtomasyon.csproj
@@ -74,6 +74,12 @@
     <Compile Include="frmGirisPnl.Designer.cs">
       <DependentUpon>frmGirisPnl.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMusteri.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGirisPnl.resx">
       <DependentUpon>frmGirisPnl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMusteri.resx">
       <DependentUpon>frmMusteri.cs</DependentUpon>
