--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdisyonBL.cs" />
     <Compile Include="KullaniciBL.cs" />
+    <Compile Include="MusteriAdisyonBL.cs" />
     <Compile Include="MusteriBL.cs" />
     <Compile Include="OdaBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
