--- a/OtelOtomasyon/OtelOtomasyon.csproj
+++ b/OtelOtomasyon/OtelOtomasyon.csproj
@@ -62,6 +62,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAdisyonIslem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAdisyonIslem.Designer.cs">
+      <DependentUpon>frmAdisyonIslem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAdisyonPnl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAdisyonPnl.Designer.cs">
+      <DependentUpon>frmAdisyonPnl.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBul.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +98,12 @@
     <Compile Include="frmMusteri.Designer.cs">
       <DependentUpon>frmMusteri.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMusteriAdisyon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMusteriAdisyon.Designer.cs">
+      <DependentUpon>frmMusteriAdisyon.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmResepsiyon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +118,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAdisyonIslem.resx">
+      <DependentUpon>frmAdisyonIslem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAdisyonPnl.resx">
+      <DependentUpon>frmAdisyonPnl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBul.resx">
       <DependentUpon>frmBul.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMusteri.resx">
       <DependentUpon>frmMusteri.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMusteriAdisyon.resx">
+      <DependentUpon>frmMusteriAdisyon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmResepsiyon.resx">
       <DependentUpon>frmResepsiyon.cs</DependentUpon>
