--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,6 +48,7 @@
     <Compile Include="MusteriAdisyon.cs" />
     <Compile Include="Oda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Yetki.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
